<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@color/shouye_background"
        android:paddingLeft="10dp"
        android:layout_height="45dp">

        <ImageView
            android:layout_width="40dp"
            android:padding="5dp"
            android:id="@+id/iv_menus"
            android:src="@drawable/navigationbarback"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:text="@string/register"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="@drawable/general_item_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/shoujihaoma_icon" />

        <EditText
            android:id="@+id/et_phone"
            android:textCursorDrawable="@drawable/color_cursor"
            style="@style/PhoneNumberInputStyle"
            android:hint="@string/input_phone_hint"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:background="@drawable/general_item_divider" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_item_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/yanzhengma_icon" />

        <EditText
            android:id="@+id/et_verify_code"
            style="@style/InvialidCodeInputStyle" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@color/main_blue" />

        <TextView
            android:id="@+id/tv_send_verify_code"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@color/main_blue" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:background="@drawable/general_item_divider" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_item_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/mima_icon" />

        <EditText
            android:id="@+id/et_pwd"
            style="@style/PasswordStyle"
            android:hint="@string/input_new_pwd_hint" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:background="@drawable/general_item_divider" />

    <Button
        android:id="@+id/btn_next"
        style="@style/RoundBlueButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:enabled="false"
        android:text="@string/next_step" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_agree_protocol"
            android:layout_width="36dp"
            android:padding="10dp"
            android:src="@drawable/checkbox_style"
            android:layout_height="36dp" />

        <TextView
            android:id="@+id/tv_agree_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_protocol"
            android:textColor="@color/general_text_blue" />
    </LinearLayout>

</LinearLayout>